--- a/Game.html
+++ b/Game.html
@@ -2,6 +2,7 @@
   <body>
     <applet
       code = "GameController.class"
+      archive="objectdraw.jar"
       width="750"
       height="750">
     </applet>
